--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,8 +16,8 @@ sonar.links.issue=https://github.com/GlaAndry/Milestone1/issues
 # =====================================================
 
 sonar.host.url=https://sonarcloud.io
-sonar.organization=GlaAndry
-sonar.login=6f405dd66b13c0dce1543f3d6480a4904e5d79fd
+sonar.organization=3aacfe8b5b095d54ca2128a4bc103641
+###sonar.login=6f405dd66b13c0dce1543f3d6480a4904e5d79fd
 sonar.sources=src
 sonar.language=java
 
