--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-<<<<<<< .mine
 language: java
 
 jdk:
@@ -11,20 +10,5 @@ addons:
 
 
 script:
-  - ant build.module
-  - sonar-scanner||||||| .r0
-=======
-language: java
-
-jdk:
-  - openjdk8
-
-addons:
-  sonarcloud:
-    organization: 3aacfe8b5b095d54ca2128a4bc103641 ##Chiave generale
-    token: e8319ed2012d0d00b0678fab26ca5d3bee74a667 ##Chiave travis
-
-
-script:
-  - ant build.module
-  - sonar-scanner>>>>>>> .r2
+  - ant build.modules
+  - sonar-scanner 
